--- a/Major/company/css/student_style.css
+++ b/Major/company/css/student_style.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500&display=swap');
+
+/* Default Theme Light*/
+
+ :root {
+    --clr-bg: #eaeaea;
+    --clr-1: red;
+    --clr-2: #0000dc;
+    --clr-3: #ffffff;
+    --clr-4: rgba(52, 52, 52, 0.134);
+    --clr-5: #000000;
+}
+
 .s1_1 {
     height: auto;
     width: auto;
@@ -16,7 +29,6 @@
     height: auto;
     width: auto;
     padding: 10px;
-    /* background-color: antiquewhite; */
 }
 
 .s1_1 .s1_2 .filters .inputbase {
@@ -42,16 +54,9 @@
     color: var(--clr-5);
 }
 
-.s1_1 .s1_2 .filters .inputbase input:nth-child(3) {
-    background: linear-gradient(45deg, var(--lg-1), var(--lg-2));
-    font-weight: bold;
-    color: var(--clr-3);
-    letter-spacing: 1px;
-}
-
 .s1_1 .s1_2 .table_base {
     max-height: 300px;
-    width: 100%;
+    width: auto;
     padding: 10px;
     overflow: auto;
     /* background-color: #0000dc; */
@@ -66,7 +71,7 @@
 
 .s1_1 .s1_2 .table_base table tbody td,
 .s1_1 .s1_2 .table_base table thead th {
-    border: 2px solid var(--clr-2);
+    border: 2px solid #0000dc;
     width: auto;
     padding: 10px;
     text-align: center;
@@ -79,14 +84,6 @@
 .s1_1 .s1_2 .table_base table thead th,
 .s1_1 .s1_2 .table_base table tbody td .data {
     color: var(--clr-5);
-}
-
-.s1_1 .s1_2 .table_base table tbody td .data input {
-    text-align: center;
-    padding: 10px;
-    border: none;
-    outline: none;
-    background-color: var(--clr-4);
 }
 
 .s1_1 .s1_2 .table_base table tbody td:last-child .data {
@@ -105,26 +102,16 @@
     width: auto;
     padding: 5px 10px 5px 10px;
     font-size: 1rem;
-    outline: transparent;
-    /* border: none; */
-}
-
-.s1_1 .s1_2 .table_base .btn-div {
-    height: auto;
-    margin-top: 10px;
-    width: auto;
-    padding: 10px;
-}
-
-.s1_1 .s1_2 .table_base .btn-div input {
-    height: auto;
-    width: auto;
-    padding: 10px;
-    letter-spacing: 1px;
-    border: none;
     outline: none;
-    background-color: var(--clr-2);
-    color: var(--clr-3);
+    border: none;
+}
+
+#place1,
+#title2,
+#title3,
+#sec2,
+#sec3 {
+    display: none;
 }
 
 .box-content button {
@@ -170,12 +157,8 @@
     .box-content .box-button {
         flex-direction: column;
     }
-    .s1_1 .s1_2 .table_base table tbody td:last-child .data a input {
-        width: 100px;
-        /* background-color: aquamarine; */
-    }
-    .s1_1 .s1_2 .table_base table {
-        width: 1000px;
+    .s1_1 .s1_2 .table_base table tbody td:last-child .data {
+        flex-direction: column;
     }
 }
 
