--- a/Major/company/css/StudentSection.css
+++ b/Major/company/css/StudentSection.css
@@ -53,6 +53,9 @@
     background-color: var(--clr-4);
     color: var(--clr-5);
 }
+.s1_1 .s1_2 .filters .inputbase input[type="button"] {
+  background-image: linear-gradient(45deg, var(--lg-1), var(--lg-2));
+}
 
 .s1_1 .s1_2 .table_base {
     max-height: 300px;
@@ -106,13 +109,13 @@
     border: none;
 }
 
-#place1,
+/* #place1,
 #title2,
 #title3,
 #sec2,
 #sec3 {
     display: none;
-}
+} */
 
 .box-content button {
     height: auto;
