--- a/Major/company/css/newPost.css
+++ b/Major/company/css/newPost.css
@@ -196,6 +196,9 @@
     flex-direction: column;
     gap: 10px;
 }
+.s1_1 .s1_2 .table_base .newNoticeBase form .form-body p{
+  color:var(--clr-5);
+}
 
 .s1_1 .s1_2 .table_base .newNoticeBase form .form-body input,
 .s1_1 .s1_2 .table_base .newNoticeBase form .form-body textarea {
